# persil

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
examples/: simple.rs
persil-derive/: Cargo.toml
persil-derive/src/: lib.rs
persil-derive/tests/: simple.rs
src/: lib.rs  nop.rs  profiler.rs
