[package]
name = "persil"
version = "0.1.3"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
description = "Persil is a minimal and simple profiling library based on measureme."
documentation = "https://docs.rs/persil"
readme = "README.md"
homepage = "https://github.com/Stupremee/persil"
repository = "https://github.com/Stupremee/persil"
license = "Zlib"
keywords = ["profiling"]
categories = ["development-tools::profiling"]

[dependencies]
measureme = "0.7.1"
once_cell = "1.4.0"
