[package]
name = "persil-derive"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.38", features = ["full"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"

[dev-dependencies]
persil = { path = "../" }
